@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-08-07  Erik Grinaker <erikg@codepoet.no>
+
+	* minor code cleanups
+
 2004-08-06  Erik Grinaker <erikg@codepoet.no>
 
 	* updated NEWS file
